// Vitest Snapshot v1

exports[`build fs output > _00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/declared-script.ts-loader.hash0.js",
      ],
      "matches": Array [
        "https://a.com/*",
        "http://b.com/*",
      ],
    },
  ],
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "http://b.com/*",
        "https://a.com/*",
      ],
      "resources": Array [
        "assets/declared-script.ts.hash1.js",
        "assets/main-world.ts.hash2.js",
      ],
      "use_dynamic_url": true,
    },
    Object {
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
      "resources": Array [
        "assets/dynamic-script.ts.hash3.js",
      ],
      "use_dynamic_url": false,
    },
  ],
}
`;

exports[`build fs output > _01 output files 1`] = `
Array [
  "assets/background.ts.hash4.js",
  "assets/declared-script.ts-loader.hash0.js",
  "assets/declared-script.ts.hash1.js",
  "assets/dynamic-script.ts-loader.hash5.js",
  "assets/dynamic-script.ts.hash3.js",
  "assets/main-world.ts.hash2.js",
  "manifest.json",
  "service-worker-loader.js",
]
`;

exports[`build fs output > assets/background.ts.hash4.js 1`] = `
"const scriptFileName = \\"/assets/dynamic-script.ts-loader.hash5.js\\";
console.log(\\"background.ts\\");
chrome.action.onClicked.addListener((tab) => {
  if (tab.id)
    chrome.scripting.executeScript({
      files: [scriptFileName],
      target: { tabId: tab.id }
    });
});
"
`;

exports[`build fs output > assets/declared-script.ts.hash1.js 1`] = `
"const fileName = \\"/assets/main-world.ts.hash2.js\\";
console.log(\\"declared script\\");
const script = document.createElement(\\"script\\");
script.src = chrome.runtime.getURL(fileName);
script.type = \\"module\\";
document.head.prepend(script);
"
`;

exports[`build fs output > assets/declared-script.ts-loader.hash0.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/declared-script.ts.hash1.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output > assets/dynamic-script.ts.hash3.js 1`] = `
"console.log(\\"dynamic script\\");
"
`;

exports[`build fs output > assets/dynamic-script.ts-loader.hash5.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/dynamic-script.ts.hash3.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output > assets/main-world.ts.hash2.js 1`] = `
"console.log(\\"main world script\\");
"
`;

exports[`build fs output > service-worker-loader.js 1`] = `
"import './assets/background.ts.hash4.js';
"
`;
